<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Data Calc</string>
    <string name="hello_world"></string>
    <string name="action_settings">Settings</string>
    <string name="smartphone">Smartphone</string>
    <string name="tablet">Tablet</string>
    <string name="laptop">Laptop</string>
    <string name="hotspot">Mobile Hotspot</string>
    <string name="selectDeviceText">Select Your Device Below:</string>
    <string name="dataEstimate">ERROR</string>
    <string name="emailNoAttach">Emails Sent without Attachments</string>
    <string name="ok">Ok</string>
    <string name="close">Close</string>
    <string name="youtubedatacalc">YouTube Data Calculator</string>
    <string name="enterURL">Enter a YouTube URL</string>
    <string name="URLHint">e.g. http://youtu.be/3UOLj1-q67</string>
    <string name="help">Help</string>

    <string-array name="monthDayWeek">
        <item>a day</item>
        <item>a week</item>
        <item>a month</item>
    </string-array>
    <string-array name="minHour">
        <item>minutes</item>
        <item>hours</item>
    </string-array>
    <string-array name="quality">
        <item>SD</item>
        <item>HD</item>
    </string-array>

    <string name="title_activity_you_tube">YouTubeActivity</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="title_section1">Data Prediction</string>
    <string name="title_section2">YouTube Calc</string>
    <string name="title_section3">Help</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_about">YouTube Calculator</string>
    <string name="title_activity_calc">CalcActivity</string>

    <color name="transparent">#00000000</color>

    <string name="title_activity_drawer_test">DrawerTest</string>
    <string name="about_description">Are you data conscious? Don\&apos;t worry! There\&apos;s an app for that! Try the new YouTube Calc! Just open the YouTube app, tap the three dots next to any video, select share, and pick Data Calc! You\&apos;ll be given a data estimate for that video over cellular data on the spot!</string>
    <string name="title_activity_test_canvas">TestCanvas</string>
    <string name="title_activity_test_calc">TestCalcActivity</string>
    <string name="title_activity_test_canvas_calc_view">TestCanvasCalcView</string>

</resources>
